cmd/cli/kubectl-kyverno/_testdata/policies-invalid/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-networkpolicy
status:
  ready: true
